<resources>
    <string name="app_name">My Inventory </string>
    <string name="unknown_product">Unnamed Product</string>
    <string name="editor_activity_title_new_product">Add a Product</string>
    <string name="editor_activity_title_edit_product">Edit Product</string>
    <string name="editor_insert_product_failed">Error in saving product</string>
    <string name="editor_insert_product_successful">Product saved</string>
    <string name="editor_update_product_failed">Error in updating product</string>
    <string name="editor_update_product_successful">Product Updated</string>
    <string name="unsaved_changes_dialog_msg">Discard your changes?</string>
    <string name="discard">Discard</string>
    <string name="keep_editing">Keep Editing</string>
    <string name="delete_dialog_msg">Delete this product?</string>
    <string name="editor_delete_product_failed">Error in deleting product</string>
    <string name="editor_delete_product_successful">Product deleted</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="empty_view_title_text">No products</string>
    <string name="empty_view_subtitle_text">Add products to inventory</string>
    <string name="action_save">Save</string>
    <string name="action_delete">Delete Product</string>
    <string name="action_insert_dummy_data">Insert Dummy Data</string>
    <string name="action_delete_all_entries">Delete All Entries</string>
    <string name="product_label">Product Name : </string>
    <string name="product_price">Rs.</string>
    <string name="product_qty">Qty : </string>
    <string name="prompt_valid_price">Enter a Valid Price</string>
    <string name="upload_image">Upload an Image</string>
    <string name="hint_product_name">Name</string>
    <string name="hint_product_price">Price in Rs : </string>
    <string name="unit_product_price">Rupees</string>
    <string name="decrease_quantity">-</string>
    <string name="hint_product_quantity">Units</string>
    <string name="unit_product_quantity">Qty : </string>
    <string name="increase_quantity">+</string>
    <string name="label_supplier">Supplier Cell Nbr : </string>
    <string name="hint_supplier_name">Name</string>
    <string name="hint_supplier_contact">Number</string>
    <string name="button_order_product">Re-Order</string>
    <string name="list_sell">Sell</string>
    <string name="prompt_for_details">"Please fill all product details"</string>
    <string name="size">Size</string>
    <string name="unit_product_size">32,34,36,38 etc</string>
    <string name="unit_product_color">Red,Blue,Green</string>
    <string name="color">Color</string>

</resources>
